--- a/css/article.css
+++ b/css/article.css
@@ -86,4 +86,8 @@ h2 {
         margin-top: 0.5rem;
 
     }
+
+    .lets-connect-social-medial-links {
+        font-size: small;
+    }
 }
